# ascii-banner

./: .gitignore  CNAME  LICENSE  README.md  gen_screenshots.py  index.html  llms.txt  pyproject.toml  robots.txt  sitemap.xml
ascii_banner/: __init__.py  __main__.py  animation.py  border.py  canvas.py  categories.py  cli.py  color.py  formatter.py  fuzzy.py  media.py  parser.py  renderer.py  smushing.py  svg.py  terminal.py
docs/: example-previews.js  fonts.js  index.html  static-examples.js
examples/: index.html
tests/: test_animation.py  test_border.py  test_canvas.py  test_categories.py  test_cli.py  test_color.py  test_formatter.py  test_fuzzy.py  test_media.py  test_parser.py  test_renderer.py  test_smushing.py  test_svg.py  test_terminal.py
